--- a/css/peliculas/spiderman.css
+++ b/css/peliculas/spiderman.css
@@ -23,18 +23,18 @@ body{
     background-attachment: fixed; /* dejamos fija la imgen*/
 }
 
-/***********************************************************************************/
+/********************************************************************************************************/
 /* caja */
 .box{
-    background-color:#587493c0;
+    background-color: #587493c0;
     width: 100%;
-    height: 100px;
-    margin-bottom: 25px;
+    height: 150px;
+    margin-bottom: 30px;
     margin-top: 35px;
     float: left;
 }
 
-/* texto cabecera*/
+/* texto pelicula*/
 #letraTitulo{
 
     color:rgb(223, 214, 222);
@@ -43,7 +43,7 @@ body{
     text-align: center;
     text-transform: uppercase; 
     word-spacing: 55px; /*separacion entre palabras*/
-    margin-top: 35px;
+    margin-top: 30px;
     -webkit-text-stroke: 0.9px rgb(176, 21, 21);
 }
 
@@ -54,23 +54,21 @@ body{
     align-items: center;  
 }
 
-
-
 /**************** VIDEO 1 ******************************************************************/
 .boxVideo1{
     float: left;
-    background-color:#ce555dc5;
+    background-color: #ce555dc5;
     width: 50%;
-    height: 450px;
+    height: 500px;
     margin: 40px;
 }
 
 .descriptionVideo1{
 
     float: left;
-    background-color:#e5b96ea2;
+    background-color: #e5b96ea2;
     width: 40%;
-    height: 450px;
+    height: 500px;
     margin-top: 35px;
 
 }
@@ -80,9 +78,9 @@ body{
 
 .boxVideo2{
     float: left;
-    background-color:#ce555dc5;
+    background-color: #ce555dc5;
     width: 50%;
-    height: 450px;
+    height: 370px;
     margin: 40px;
 
 }
@@ -90,9 +88,9 @@ body{
 .descriptionVideo2{
 
     float: left;
-    background-color:#e5b96ea2;
+    background-color: #e5b96ea2;
     width: 40%;
-    height: 450px;
+    height: 370px;
     margin-top: 35px;
 
 }
@@ -102,9 +100,9 @@ body{
 
 .boxVideo3{
     float: left;
-    background-color:#ce555dc5;
+    background-color: #ce555dc5;
     width: 50%;
-    height: 450px;
+    height: 370px;
     margin: 40px;
     
 }
@@ -112,13 +110,12 @@ body{
 .descriptionVideo3{
 
     float: left;
-    background-color:#e5b96ea2;
+    background-color: #e5b96ea2;
     width: 40%;
-    height: 450px;
+    height: 370px;
     margin-top: 35px;
 
 }
-
 
 /** propiedades conjuntas **/
 
@@ -141,7 +138,7 @@ body{
     
 }
 
-/*************************************************************************************/
+/*****************************************************************************/
 
 .estiloParrafo{
 
@@ -159,7 +156,7 @@ body{
 #letraPeliculas{
 
     color:rgb(223, 214, 222);
-    font: 40px bold;
+    font: 30px bold;
     font-family: avengers;
     text-align: center;
     text-transform: uppercase; 
@@ -171,52 +168,45 @@ body{
 @media screen and (min-width: 1300px) {
     .boxVideo1{
         float: left;
-        background-color:#ce555dc5;
         width: 52%;
-        height: 450px;
+        height: 500px;
         margin: 0px;
     }
     .descriptionVideo1{
         float: right;
-        background-color:#e5b96ea2;
         width: 44%;
-        height: 450px;
+        height: 500px;
         margin: 0px;
     }
     .boxVideo2{
         float: left;
-        background-color:#ce555dc5;
         width: 52%;
-        height: 450px;
+        height: 370px;
         margin: 0px;
         margin-top: 30px;
     }
     .descriptionVideo2{
         float: right;
-        background-color:#e5b96ea2;
         width: 44%;
-        height: 450px;
+        height: 370px;
         margin: 0px;
         margin-top: 30px;
     }
     .boxVideo3{
         float: left;
-        background-color:#ce555dc5;
         width: 52%;
-        height: 450px;
+        height: 370px;
         margin: 0px;
         margin-top: 30px;
-        margin-bottom: 30px;
     }
     .descriptionVideo3{
         float: right;
-        background-color:#e5b96ea2;
         width: 44%;
-        height: 450px;
+        height: 370px;
         margin: 0px;
         margin-top: 30px;
-        margin-bottom: 30px;
     }
+    
 }
 
 @media screen and (max-width: 700px) and (orientation: portrait){
@@ -295,10 +285,8 @@ body{
         width: 98%;
         height: auto;
         margin-top: 15px;
-        margin-bottom: 15px;
-    }
-
     
+    }
     
     /* posicion video caja */
     
@@ -326,29 +314,56 @@ body{
     }
 }
 
-
-@media screen and (max-height: 700px) and (orientation: landscape){
+@media screen and (max-width: 700px) and (orientation: landscape){
+    /* Contenedeor del fondo de pantalla */
     
-    /* texto cabecera*/
-    #letraTitulo{
-    
-        font-size: 40px;
-        word-spacing: 25px; /*separacion entre palabras*/
-        margin-top: 15px;
+    .containerFondo{
+        width: auto;
     }
     
+    /********************************************************************************************************/
+    /* caja */
+    .box{
+
+        width: 100%;
+        height: 20px;
+        margin-bottom: 10px;
+        margin-top: 15px;
+        float: left;
+    }
+    
+    /* texto pelicula*/
+    #letraTitulo{
+        font-size: 25px;
+        word-spacing: 10px; /*separacion entre palabras*/
+        margin-top: 10px;
+        -webkit-text-stroke: 0.7px rgb(176, 21, 21);
+    }
+    
+     /* centrar elemntos*/
+    .centrarElementos{
+        display: flex;
+        justify-content: center; /*alineacion horizontal*/
+        align-items: center;  
+    }
+    
+    /**************** VIDEO 1 ******************************************************************/
     .boxVideo1{
+        float: none;
+        width: 50%;
         height: 350px;
+        margin: 20px;
     }
     
     .descriptionVideo1{
     
+        width: 40%;
         float: none;
         position: absolute;
-        top: 437px;
-        left: 400px;
-        width: 37%;
-        height: 354px;
+        left: 55%;
+        top: 305px;
+        height: auto;
+        margin-top: 15px;
     
     }
     
@@ -356,17 +371,21 @@ body{
     /**************** VIDEO 2 ******************************************************************/
     
     .boxVideo2{
+        float: none;
+        width: 50%;
         height: 350px;
+        margin: 20px;
     }
-
+    
     .descriptionVideo2{
     
+        width: 40%;
         float: none;
         position: absolute;
-        top: 908px;
-        left: 400px;
-        width: 37%;
-        height: 354px;
+        left: 55%;
+        top: 710px;
+        height: 355px;
+        margin-top: 15px;
     
     }
     
@@ -374,60 +393,42 @@ body{
     /**************** VIDEO 3 ******************************************************************/
     
     .boxVideo3{
-        height: 350px;
-    }
-
-    .descriptionVideo3{
-    
         float: none;
-        position: absolute;
-        top: 1379px;
-        left: 400px;
-        width: 37%;
-        height: 352px;
-    
-    }
-    
-    
-    /*****************************************************************************/
-    /** propiedades conjuntas **/
-    
-    .propiedadesBox{
-    
-        border-radius: 20px;
-        box-shadow: 10px 10px 10px #b3b5caa6;
-        padding-top: 20px;
-        padding-bottom: 20px;
-    
-    }
-    
-    /*****************************************************************************/
-    /* posicion video caja */
-    
-    .positionVideo{ /*Alineacion del elemento Flexbox*/
-        display: flex;
-        justify-content: center; /*alineacion horizontal*/
-        align-items: center; /*alineacion vertical*/
+        width: 50%;
+        height: 350px;
+        margin: 20px;
         
     }
     
+    .descriptionVideo3{
+
+        width: 40%;
+        float: none;
+        position: absolute;
+        left: 55%;
+        top: 1123px;
+        height: 355px;
+        margin-top: 15px;
+    }
+
     /*****************************************************************************/
     
     .estiloParrafo{
     
-        font-size: 15px;
-        margin: 5px 10px;
+        font-size: 13px;
+        margin: 10px 10px;
         text-indent: 20px; /*sangria*/
-        line-height: 15px;  /*separacion lineas*/
-        letter-spacing: 1px; /*separacion entre letras*/
+        line-height: 20px;  /*separacion lineas*/
+        letter-spacing: 0px; /*separacion entre letras*/
     }
     
     #letraPeliculas{
     
-        font-size: 21px;
+        font-size: 20px;
         word-spacing: 5px; /*separacion entre palabras*/
+        margin-top: 5px;
+        -webkit-text-stroke: 0.5px rgb(176, 21, 21);
     }
-    
 }
 
 
@@ -436,93 +437,88 @@ body{
     body{
         width: auto;
         margin: auto;
-    
     }
 
-    .propiedadesBox{
+.estiloParrafo{
 
-        border-radius: 20px;
-        box-shadow: 10px 10px 10px #b3b5caa6;
-        padding-top: 20px;
-        padding-bottom: 20px;
-        margin-left:0;
-        
-    }
+    font-size: 15px;
+    color: aliceblue;
+    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    text-align: justify;
+    float: left;
+    margin: 10px 10px;
+    text-indent: 50px; 
+    line-height: 23px;  
+    letter-spacing: 1px; 
+}
+    
+#letraPeliculas{
+    
+    color:rgb(223, 214, 222);
+    font: 20px bold;
+    font-family: avengers;
+    text-align: center;
+    text-transform: uppercase; 
+    word-spacing: 15px; 
+    margin-top: 15px;
+    -webkit-text-stroke: 0.5px rgb(176, 21, 21);
+}
 
-    .descriptionVideo1{
+.propiedadesBox{
 
-        float: left;
-        background-color:#e5b96ea2;
-        width: 44%;
-        height: 450px;
-        margin-top: 35px;
+    border-radius: 20px;
+    box-shadow: 10px 10px 10px #b3b5caa6;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    margin-left:0;
     
-    }
-    
-    .descriptionVideo2{
+}
 
-        float: left;
-        background-color:#e5b96ea2;
-        width: 44%;
-        height: 450px;
-        margin-top: 35px;
-    
-    }
+.descriptionVideo1{
 
-    .descriptionVideo3{
-
-        float: left;
-        background-color:#e5b96ea2;
-        width: 44%;
-        height: 450px;
-        margin-top: 35px;
+    float: left;
+    width: 44%;
+    height: 500px;
+    margin-top: 35px;
     
-    }
-    
-    .estiloParrafo{
-
-        font-size: 15px;
-        color: aliceblue;
-        font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-        text-align: justify;
-        float: left;
-        margin: 10px 10px;
-        text-indent: 50px;
-        line-height: 23px;  
-        letter-spacing: 1px; 
-    }
-    
-    #letraPeliculas{
-    
-        color:rgb(223, 214, 222);
-        font: 20px bold;
-        font-family: avengers;
-        text-align: center;
-        text-transform: uppercase; 
-        word-spacing: 15px; 
-        margin-top: 15px;
-        -webkit-text-stroke: 0.5px rgb(176, 21, 21);
-    }
-
-    .box{
-        background-color:#587493c0;
-        width: 100%;
-        height: 100px;
-        margin-bottom: 25px;
-        margin-top: 35px;
-        float: left;
-    }
-    
-    footer.boxFooter{
-        
-        background-color:  rgba(45, 13, 20, 0.779);
-        width: 98%;
-        height: 200px;
-        margin-bottom: 20px;
-        box-shadow: 10px 10px 10px #b3b5caa6;
-    }
+}
 
     
+.descriptionVideo2{
+
+    float: left;
+    width: 44%;
+    height: 370px;
+    margin-top: 35px;
+
+}
+   
+
+.descriptionVideo3{
+
+    float: left;
+    width: 44%;
+    height: 370px;
+    margin-top: 35px;
+
+}
+
+
+footer.boxFooter{
+    width: 98%;
+    height: 200px;
+    margin-bottom: 20px;
+    box-shadow: 10px 10px 10px #b3b5caa6;
+}
+
+.box{
+    background-color:#c8ceaab4;
+    width: 100%;
+    height: 150px;
+    margin-bottom: 30px;
+    margin-top: 35px;
+    float: left;
+}
 
 }
 
@@ -532,63 +528,94 @@ body{
     body{
         width: auto;
         margin: auto;
-
     }
 
-    .propiedadesBox{
+.estiloParrafo{
 
-        border-radius: 20px;
-        box-shadow: 10px 10px 10px #b3b5caa6;
-        padding-top: 20px;
-        padding-bottom: 20px;
-        margin-left:0;
-        
-    }
-
-    .descriptionVideo1{
-
-        float: left;
-        background-color:#e5b96ea2;
-        width: 46%;
-        height: 450px;
-        margin-top: 35px;
-    
+    font-size: 18px;
+    color: aliceblue;
+    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    text-align: justify;
+    float: left;
+    margin: 10px 10px;
+    text-indent: 50px; 
+    line-height: 25px;  
+    letter-spacing: 1px; 
     }
     
-    .descriptionVideo2{
-
-        float: left;
-        background-color:#e5b96ea2;
-        width: 46%;
-        height: 450px;
-        margin-top: 35px;
+#letraPeliculas{
     
-    }
+    color:rgb(223, 214, 222);
+    font: 30px bold;
+    font-family: avengers;
+    text-align: center;
+    text-transform: uppercase; 
+    word-spacing: 15px; 
+    margin-top: 15px;
+    -webkit-text-stroke: 0.5px rgb(176, 21, 21);
+}
 
-    .descriptionVideo3{
+.propiedadesBox{
 
-        float: left;
-        background-color:#e5b96ea2;
-        width: 46%;
-        height: 450px;
-        margin-top: 35px;
+    border-radius: 20px;
+    box-shadow: 10px 10px 10px #b3b5caa6;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    margin-left:0;
     
-    }
+}
 
-    .estiloParrafo{
+.boxVideo1{
+    float: left;
+    width: 52%;
+    height: 500px;
+    margin: 0px;
+}
+.descriptionVideo1{
+    float: right;
+    width: 44%;
+    height: 500px;
+    margin: 0px;
+}
+.boxVideo2{
+    float: left;
+    width: 52%;
+    height: 420px;
+    margin: 0px;
+    margin-top: 30px;
+}
+.descriptionVideo2{
+    float: right;
+    width: 44%;
+    height: 420px;
+    margin: 0px;
+    margin-top: 30px;
+}
+.boxVideo3{
+    float: left;
+    width: 52%;
+    height: 420px;
+    margin: 0px;
+    margin-top: 30px;
+}
+.descriptionVideo3{
+    float: right;
+    width: 44%;
+    height: 420px;
+    margin: 0px;
+    margin-top: 30px;
+}
 
-        font-size: 18px;
-        color: aliceblue;
-        font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-        text-align: justify;
-        float: left;
-        margin: 10px 10px;
-        text-indent: 50px; /*sangria*/
-        line-height: 30px;  /*separacion lineas*/
-        letter-spacing: 1px; /*separacion entre letras*/
-    }
+footer.boxFooter{
+    width: 100%;
+    height: 200px;
+    margin-bottom: 20px;
+    box-shadow: 10px 10px 10px #b3b5caa6;
+}
 
-}  
+}
+
+
 
 
 
