--- a/css/peliculas/wakanda.css
+++ b/css/peliculas/wakanda.css
@@ -7,11 +7,9 @@
 }
 
 
-
 /* Fondo de la página*/
 body{
     max-width: 1300px;
-    max-height: 768px;
     margin: 0 auto;
 }
 
@@ -25,18 +23,18 @@ body{
     background-attachment: fixed; /* dejamos fija la imgen*/
 }
 
-/*********************************************************************************************/
+/********************************************************************************************************/
 /* caja */
 .box{
     background-color: #a4b2a5d8;
     width: 100%;
-    height: 100px;
+    height: 150px;
     margin-bottom: 30px;
     margin-top: 35px;
     float: left;
 }
 
-/* texto titulo pelicula*/
+/* texto pelicula*/
 #letraTitulo{
 
     color:rgb(223, 214, 222);
@@ -46,7 +44,7 @@ body{
     text-transform: uppercase; 
     word-spacing: 55px; /*separacion entre palabras*/
     margin-top: 30px;
-    -webkit-text-stroke: 0.9px #1a4f61;
+    -webkit-text-stroke: 0.9px rgb(176, 21, 21);
 }
 
  /* centrar elemntos*/
@@ -55,7 +53,6 @@ body{
     justify-content: center; /*alineacion horizontal*/
     align-items: center;  
 }
-
 
 /**************** VIDEO 1 ******************************************************************/
 .boxVideo1{
@@ -69,7 +66,7 @@ body{
 .descriptionVideo1{
 
     float: left;
-    background-color:#1a4f61da;
+    background-color: #1a4f61da;
     width: 40%;
     height: 500px;
     margin-top: 35px;
@@ -83,7 +80,7 @@ body{
     float: left;
     background-color: rgba(115, 181, 207, 0.374);
     width: 50%;
-    height: 450px;
+    height: 370px;
     margin: 40px;
 
 }
@@ -91,13 +88,12 @@ body{
 .descriptionVideo2{
 
     float: left;
-    background-color:#1a4f61da;
+    background-color: #1a4f61da;
     width: 40%;
-    height:  450px;
+    height: 370px;
     margin-top: 35px;
 
 }
-
 
 /** propiedades conjuntas **/
 
@@ -120,7 +116,6 @@ body{
     
 }
 
-
 /*****************************************************************************/
 
 .estiloParrafo{
@@ -139,7 +134,7 @@ body{
 #letraPeliculas{
 
     color:rgb(223, 214, 222);
-    font: 40px bold;
+    font: 30px bold;
     font-family: avengers;
     text-align: center;
     text-transform: uppercase; 
@@ -151,36 +146,31 @@ body{
 @media screen and (min-width: 1300px) {
     .boxVideo1{
         float: left;
-        background-color: rgba(115, 181, 207, 0.374);
         width: 52%;
         height: 500px;
         margin: 0px;
     }
     .descriptionVideo1{
         float: right;
-        background-color:#1a4f61da;
         width: 44%;
         height: 500px;
         margin: 0px;
     }
     .boxVideo2{
         float: left;
-        background-color: rgba(115, 181, 207, 0.374);
         width: 52%;
-        height: 450px;
+        height: 370px;
         margin: 0px;
         margin-top: 30px;
-        margin-bottom: 30px;
     }
     .descriptionVideo2{
         float: right;
-        background-color:#1a4f61da;
         width: 44%;
-        height:  450px;
+        height: 370px;
         margin: 0px;
         margin-top: 30px;
-        margin-bottom: 30px;
     }
+    
 }
 
 @media screen and (max-width: 700px) and (orientation: portrait){
@@ -225,12 +215,7 @@ body{
     .descriptionVideo1{
     
         width: 98%;
-        float: right;
-        overflow: scroll;
-
-        padding: 20px;
-        margin-right: 25%;
-        
+        height: auto;
         margin-top: 15px;
     
     }
@@ -247,15 +232,11 @@ body{
     
         width: 98%;
         height: auto;
-        margin-right: 25%;
         margin-top: 15px;
-        padding: 20px;
-        margin-bottom: 15px;
+    
     }
     
-    
     /* posicion video caja */
-    
    
     iframe{
         display: none;
@@ -264,8 +245,7 @@ body{
     
     .estiloParrafo{
     
-        font-size: 12px;
-        
+        font-size: 14px;
         margin: 10px 10px;
         text-indent: 20px; /*sangria*/
         line-height: 20px;  /*separacion lineas*/
@@ -274,7 +254,102 @@ body{
     
     #letraPeliculas{
     
-        font-size: 15px;
+        font-size: 20px;
+        word-spacing: 5px; /*separacion entre palabras*/
+        margin-top: 5px;
+        -webkit-text-stroke: 0.5px rgb(176, 21, 21);
+    }
+}
+
+@media screen and (max-width: 700px) and (orientation: landscape){
+    /* Contenedeor del fondo de pantalla */
+    
+    .containerFondo{
+        width: auto;
+    }
+    
+    /********************************************************************************************************/
+    /* caja */
+    .box{
+
+        width: 100%;
+        height: 20px;
+        margin-bottom: 10px;
+        margin-top: 15px;
+        float: left;
+    }
+    
+    /* texto pelicula*/
+    #letraTitulo{
+        font-size: 25px;
+        word-spacing: 10px; /*separacion entre palabras*/
+        margin-top: 10px;
+        -webkit-text-stroke: 0.7px rgb(176, 21, 21);
+    }
+    
+     /* centrar elemntos*/
+    .centrarElementos{
+        display: flex;
+        justify-content: center; /*alineacion horizontal*/
+        align-items: center;  
+    }
+    
+    /**************** VIDEO 1 ******************************************************************/
+    .boxVideo1{
+        float: none;
+        width: 50%;
+        height: 350px;
+        margin: 20px;
+    }
+    
+    .descriptionVideo1{
+    
+        width: 40%;
+        float: none;
+        position: absolute;
+        left: 55%;
+        top: 305px;
+        height: auto;
+        margin-top: 15px;
+    
+    }
+    
+    /*******************************************************************************************/
+    /**************** VIDEO 2 ******************************************************************/
+    
+    .boxVideo2{
+        float: none;
+        width: 50%;
+        height: 350px;
+        margin: 20px;
+    }
+    
+    .descriptionVideo2{
+    
+        width: 40%;
+        float: none;
+        position: absolute;
+        left: 55%;
+        top: 710px;
+        height: 355px;
+        margin-top: 15px;
+    
+    }
+
+    /*****************************************************************************/
+    
+    .estiloParrafo{
+    
+        font-size: 13px;
+        margin: 10px 10px;
+        text-indent: 20px; /*sangria*/
+        line-height: 20px;  /*separacion lineas*/
+        letter-spacing: 0px; /*separacion entre letras*/
+    }
+    
+    #letraPeliculas{
+    
+        font-size: 20px;
         word-spacing: 5px; /*separacion entre palabras*/
         margin-top: 5px;
         -webkit-text-stroke: 0.5px rgb(176, 21, 21);
@@ -282,145 +357,12 @@ body{
 }
 
 
-@media screen and (max-height: 700px) and (orientation: landscape){
-    
-    /* texto cabecera*/
-    #letraTitulo{
-    
-        font-size: 40px;
-        word-spacing: 25px; /*separacion entre palabras*/
-        margin-top: 15px;
-    }
-    
-    .boxVideo1{
-        height: 350px;
-    }
-    
-    .descriptionVideo1{
-    
-        float: none;
-        position: absolute;
-
-        top: 443px;
-        left: 400px;
-        width: 37%;
-        height: 354px;
-    
-    }
-     
-    /*******************************************************************************************/
-    /**************** VIDEO 2 ******************************************************************/
-    
-    .boxVideo2{
-        height: 350px;
-    }
-
-    .descriptionVideo2{
-    
-        float: none;
-        position: absolute;
-        top: 912px;
-        left: 400px;
-        width: 37%;
-        height: 354px;
-    
-    }
-    
-    
-    /*****************************************************************************/
-    /** propiedades conjuntas **/
-    
-    .propiedadesBox{
-    
-        border-radius: 20px;
-        box-shadow: 10px 10px 10px #b3b5caa6;
-        padding-top: 20px;
-        padding-bottom: 20px;
-    
-    }
-    
-    /*****************************************************************************/
-    /* posicion video caja */
-    
-    .positionVideo{ /*Alineacion del elemento Flexbox*/
-        display: flex;
-        justify-content: center; /*alineacion horizontal*/
-        align-items: center; /*alineacion vertical*/
-        
-    }
-    
-    /*****************************************************************************/
-    
-    .estiloParrafo{
-    
-        font-size: 15px;
-        margin: 5px 10px;
-        text-indent: 20px; /*sangria*/
-        line-height: 15px;  /*separacion lineas*/
-        letter-spacing: 1px; /*separacion entre letras*/
-    }
-    
-    #letraPeliculas{
-    
-        font-size: 21px;
-        word-spacing: 5px; /*separacion entre palabras*/
-    }
-    
-}
-
-
-
 @media only screen and (min-width: 768px) and (max-width: 1024px)  and (orientation: portrait) {
 
     body{
         width: auto;
         margin: auto;
-
     }
-
-
-
-.propiedadesBox{
-    border-radius: 20px;
-    box-shadow: 10px 10px 10px #b3b5caa6;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    margin-left:0;
-}
-
-.descriptionVideo1{
-    float: right;
-    background-color:#1a4f61da;
-    width: 43%;
-    height: 500px;
-}
-
-.descriptionVideo2{
-    float: right;
-    background-color:#1a4f61da;
-    width: 43%;
-    height:  450px;
-}
-
-#letraPeliculas{
-    color:rgb(223, 214, 222);
-    font: 20px bold;
-    font-family: avengers;
-    text-align: center;
-    text-transform: uppercase; 
-    word-spacing: 15px; /*separacion entre palabras*/
-    margin-top: 15px;
-    -webkit-text-stroke: 0.5px rgb(176, 21, 21);
-}
-
-.box{
-    background-color: #a4b2a5d8;
-    width: 100%;
-    height: 100px;
-    margin-bottom: 30px;
-    margin-top: 35px;
-    float: left;
-}
 
 .estiloParrafo{
 
@@ -430,14 +372,70 @@ body{
     text-align: justify;
     float: left;
     margin: 10px 10px;
-    text-indent: 50px; /*sangria*/
-    line-height: 25px;  /*separacion lineas*/
-    letter-spacing: 1px; /*separacion entre letras*/
+    text-indent: 50px; 
+    line-height: 23px;  
+    letter-spacing: 1px; 
+}
+    
+#letraPeliculas{
+    
+    color:rgb(223, 214, 222);
+    font: 20px bold;
+    font-family: avengers;
+    text-align: center;
+    text-transform: uppercase; 
+    word-spacing: 15px; 
+    margin-top: 15px;
+    -webkit-text-stroke: 0.5px rgb(176, 21, 21);
+}
+
+.propiedadesBox{
+
+    border-radius: 20px;
+    box-shadow: 10px 10px 10px #b3b5caa6;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    margin-left:0;
+    
+}
+
+.descriptionVideo1{
+
+    float: left;
+    width: 44%;
+    height: 500px;
+    margin-top: 35px;
+    
+}
+
+    
+.descriptionVideo2{
+
+    float: left;
+    width: 44%;
+    height: 370px;
+    margin-top: 35px;
+
+}
+
+
+footer.boxFooter{
+    width: 98%;
+    height: 200px;
+    margin-bottom: 20px;
+    box-shadow: 10px 10px 10px #b3b5caa6;
+}
+
+.box{
+    background-color:#c8ceaab4;
+    width: 100%;
+    height: 150px;
+    margin-bottom: 30px;
+    margin-top: 35px;
+    float: left;
 }
 
 }
-
-
 
 
 @media only screen and (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
@@ -447,55 +445,76 @@ body{
         margin: auto;
     }
 
-    .propiedadesBox{
+.estiloParrafo{
 
-        border-radius: 20px;
-        box-shadow: 10px 10px 10px #b3b5caa6;
-        padding-top: 20px;
-        padding-bottom: 20px;
-        margin-left:0;
-        
-    }
-
-    .descriptionVideo1{
-
-        float: left;
-        background-color:#1a4f61da;
-        width: 46%;
-        height: 500px;
-        margin-top: 35px;
+    font-size: 18px;
+    color: aliceblue;
+    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    text-align: justify;
+    float: left;
+    margin: 10px 10px;
+    text-indent: 50px; 
+    line-height: 25px;  
+    letter-spacing: 1px; 
     }
     
-    .descriptionVideo2{
+#letraPeliculas{
     
-        float: left;
-        background-color:#1a4f61da;
-        width: 46%;
-        height:  450px;
-        margin-top: 35px;
-    
-    }
-
-    .box{
-        background-color: #a4b2a5d8;
-        width: 100%;
-        height: 100px;
-        margin-bottom: 30px;
-        margin-top: 35px;
-        float: left;
-    }
-    
-    
-
+    color:rgb(223, 214, 222);
+    font: 30px bold;
+    font-family: avengers;
+    text-align: center;
+    text-transform: uppercase; 
+    word-spacing: 15px; 
+    margin-top: 15px;
+    -webkit-text-stroke: 0.5px rgb(176, 21, 21);
 }
 
+.propiedadesBox{
 
+    border-radius: 20px;
+    box-shadow: 10px 10px 10px #b3b5caa6;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    margin-left:0;
+    
+}
 
+.boxVideo1{
+    float: left;
+    width: 52%;
+    height: 500px;
+    margin: 0px;
+}
+.descriptionVideo1{
+    float: right;
+    width: 44%;
+    height: 500px;
+    margin: 0px;
+}
+.boxVideo2{
+    float: left;
+    width: 52%;
+    height: 420px;
+    margin: 0px;
+    margin-top: 30px;
+}
+.descriptionVideo2{
+    float: right;
+    width: 44%;
+    height: 420px;
+    margin: 0px;
+    margin-top: 30px;
+}
 
+footer.boxFooter{
+    width: 100%;
+    height: 200px;
+    margin-bottom: 20px;
+    box-shadow: 10px 10px 10px #b3b5caa6;
+}
 
-
-
-
+}
 
 
 
