--- a/css/peliculas/capitanamerica.css
+++ b/css/peliculas/capitanamerica.css
@@ -23,31 +23,30 @@ body{
     background-attachment: fixed; /* dejamos fija la imgen*/
 }
 
-/*****************************************************************************************/
-/*Cajas*/
+/********************************************************************************************************/
+/* caja */
 .box{
-    background-color:  rgba(103, 22, 27, 0.727);
+    background-color: rgba(103, 22, 27, 0.727);
     width: 100%;
-    height: 100px;
-    margin-bottom: 25px;
+    height: 150px;
+    margin-bottom: 30px;
     margin-top: 35px;
-    float:left
+    float: left;
 }
 
-/* texto cabecera*/
+/* texto pelicula*/
 #letraTitulo{
 
     color:rgb(223, 214, 222);
-    font: 40px bold;
+    font: 50px bold;
     font-family: avengers;
     text-align: center;
     text-transform: uppercase; 
     word-spacing: 55px; /*separacion entre palabras*/
-    margin-top: 25px;
+    margin-top: 30px;
     -webkit-text-stroke: 1.2px rgb(14, 33, 72);
 }
 
-/**********************************************************************************/
  /* centrar elemntos*/
 .centrarElementos{
     display: flex;
@@ -55,13 +54,12 @@ body{
     align-items: center;  
 }
 
-/*********** CAJAS *********************************************************************/
 /**************** VIDEO 1 ******************************************************************/
 .boxVideo1{
     float: left;
     background-color: rgba(11, 79, 142, 0.59);
     width: 50%;
-    height: 450px;
+    height: 500px;
     margin: 40px;
 }
 
@@ -70,7 +68,7 @@ body{
     float: left;
     background-color: rgba(15, 34, 72, 0.859);
     width: 40%;
-    height: 450px;
+    height: 500px;
     margin-top: 35px;
 
 }
@@ -82,7 +80,7 @@ body{
     float: left;
     background-color: rgba(11, 79, 142, 0.59);
     width: 50%;
-    height: 450px;
+    height: 370px;
     margin: 40px;
 
 }
@@ -92,7 +90,7 @@ body{
     float: left;
     background-color: rgba(15, 34, 72, 0.859);
     width: 40%;
-    height: 450px;
+    height: 370px;
     margin-top: 35px;
 
 }
@@ -104,7 +102,7 @@ body{
     float: left;
     background-color: rgba(11, 79, 142, 0.59);
     width: 50%;
-    height: 450px;
+    height: 370px;
     margin: 40px;
     
 }
@@ -114,11 +112,10 @@ body{
     float: left;
     background-color: rgba(15, 34, 72, 0.859);
     width: 40%;
-    height: 450px;
+    height: 370px;
     margin-top: 35px;
 
 }
-
 
 /** propiedades conjuntas **/
 
@@ -141,7 +138,6 @@ body{
     
 }
 
-
 /*****************************************************************************/
 
 .estiloParrafo{
@@ -151,7 +147,7 @@ body{
     font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     text-align: justify;
     float: left;
-    margin: 20px 20px;
+    margin: 10px 10px;
     text-indent: 50px; /*sangria*/
     line-height: 30px;  /*separacion lineas*/
     letter-spacing: 1px; /*separacion entre letras*/
@@ -160,7 +156,7 @@ body{
 #letraPeliculas{
 
     color:rgb(223, 214, 222);
-    font: 40px bold;
+    font: 30px bold;
     font-family: avengers;
     text-align: center;
     text-transform: uppercase; 
@@ -172,54 +168,46 @@ body{
 @media screen and (min-width: 1300px) {
     .boxVideo1{
         float: left;
-        background-color: rgba(11, 79, 142, 0.59);
         width: 52%;
-        height: 450px;
+        height: 500px;
         margin: 0px;
     }
     .descriptionVideo1{
         float: right;
-        background-color: rgba(15, 34, 72, 0.859);
         width: 44%;
-        height: 450px;
+        height: 500px;
         margin: 0px;
     }
     .boxVideo2{
         float: left;
-        background-color: rgba(11, 79, 142, 0.59);
         width: 52%;
-        height: 450px;
+        height: 370px;
         margin: 0px;
         margin-top: 30px;
     }
     .descriptionVideo2{
         float: right;
-        background-color: rgba(15, 34, 72, 0.859);
         width: 44%;
-        height: 450px;
+        height: 370px;
         margin: 0px;
         margin-top: 30px;
     }
     .boxVideo3{
         float: left;
-        background-color: rgba(11, 79, 142, 0.59);
         width: 52%;
-        height: 450px;
+        height: 370px;
         margin: 0px;
         margin-top: 30px;
-        margin-bottom: 30px;
     }
     .descriptionVideo3{
         float: right;
-        background-color: rgba(15, 34, 72, 0.859);
         width: 44%;
-        height: 450px;
+        height: 370px;
         margin: 0px;
         margin-top: 30px;
-        margin-bottom:30px;
     }
+    
 }
-
 
 @media screen and (max-width: 700px) and (orientation: portrait){
     
@@ -297,12 +285,8 @@ body{
         width: 98%;
         height: auto;
         margin-top: 15px;
-        margin-bottom: 15px;
     
     }
-
-
-    
     
     /* posicion video caja */
     
@@ -330,30 +314,56 @@ body{
     }
 }
 
-
-
-@media screen and (max-height: 700px) and (orientation: landscape){
+@media screen and (max-width: 700px) and (orientation: landscape){
+    /* Contenedeor del fondo de pantalla */
     
-    /* texto cabecera*/
-    #letraTitulo{
-    
-        font-size: 40px;
-        word-spacing: 25px; /*separacion entre palabras*/
-        margin-top: 15px;
+    .containerFondo{
+        width: auto;
     }
     
+    /********************************************************************************************************/
+    /* caja */
+    .box{
+
+        width: 100%;
+        height: 20px;
+        margin-bottom: 10px;
+        margin-top: 15px;
+        float: left;
+    }
+    
+    /* texto pelicula*/
+    #letraTitulo{
+        font-size: 25px;
+        word-spacing: 10px; /*separacion entre palabras*/
+        margin-top: 10px;
+        -webkit-text-stroke: 0.7px rgb(176, 21, 21);
+    }
+    
+     /* centrar elemntos*/
+    .centrarElementos{
+        display: flex;
+        justify-content: center; /*alineacion horizontal*/
+        align-items: center;  
+    }
+    
+    /**************** VIDEO 1 ******************************************************************/
     .boxVideo1{
+        float: none;
+        width: 50%;
         height: 350px;
+        margin: 20px;
     }
     
     .descriptionVideo1{
     
+        width: 40%;
         float: none;
         position: absolute;
-        top: 437px;
-        left: 400px;
-        width: 37%;
-        height: 354px;
+        left: 55%;
+        top: 305px;
+        height: auto;
+        margin-top: 15px;
     
     }
     
@@ -361,17 +371,21 @@ body{
     /**************** VIDEO 2 ******************************************************************/
     
     .boxVideo2{
+        float: none;
+        width: 50%;
         height: 350px;
+        margin: 20px;
     }
-
+    
     .descriptionVideo2{
     
+        width: 40%;
         float: none;
         position: absolute;
-        top: 908px;
-        left: 400px;
-        width: 37%;
-        height: 354px;
+        left: 55%;
+        top: 710px;
+        height: 355px;
+        margin-top: 15px;
     
     }
     
@@ -379,320 +393,224 @@ body{
     /**************** VIDEO 3 ******************************************************************/
     
     .boxVideo3{
-        height: 350px;
-    }
-
-    .descriptionVideo3{
-    
         float: none;
-        position: absolute;
-        top: 1379px;
-        left: 400px;
-        width: 37%;
-        height: 352px;
-    
-    }
-    
-    
-    /*****************************************************************************/
-    /** propiedades conjuntas **/
-    
-    .propiedadesBox{
-    
-        border-radius: 20px;
-        box-shadow: 10px 10px 10px #b3b5caa6;
-        padding-top: 20px;
-        padding-bottom: 20px;
-    
-    }
-    
-    /*****************************************************************************/
-    /* posicion video caja */
-    
-    .positionVideo{ /*Alineacion del elemento Flexbox*/
-        display: flex;
-        justify-content: center; /*alineacion horizontal*/
-        align-items: center; /*alineacion vertical*/
+        width: 50%;
+        height: 350px;
+        margin: 20px;
         
     }
     
+    .descriptionVideo3{
+
+        width: 40%;
+        float: none;
+        position: absolute;
+        left: 55%;
+        top: 1123px;
+        height: 355px;
+        margin-top: 15px;
+    }
+
     /*****************************************************************************/
     
     .estiloParrafo{
     
-        font-size: 17px;
+        font-size: 13px;
         margin: 10px 10px;
         text-indent: 20px; /*sangria*/
-        line-height: 15px;  /*separacion lineas*/
-        letter-spacing: 1px; /*separacion entre letras*/
+        line-height: 20px;  /*separacion lineas*/
+        letter-spacing: 0px; /*separacion entre letras*/
     }
     
     #letraPeliculas{
     
-        font-size: 23px;
+        font-size: 20px;
         word-spacing: 5px; /*separacion entre palabras*/
+        margin-top: 5px;
+        -webkit-text-stroke: 0.5px rgb(176, 21, 21);
     }
-
-    
 }
 
 
 @media only screen and (min-width: 768px) and (max-width: 1024px)  and (orientation: portrait) {
 
     body{
-   
-       width: auto;
-       margin: auto;
-   }
-   
-   
-   
-   .estiloParrafo{
-   
-       font-size: 15px;
-       color: aliceblue;
-       font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-       text-align: justify;
-       float: left;
-       margin: 10px 10px;
-       text-indent: 50px; 
-       line-height: 25px;  
-       letter-spacing: 1px; 
-   }
-   
-   #letraPeliculas{
-   
-       color:rgb(223, 214, 222);
-       font: 20px bold;
-       font-family: avengers;
-       text-align: center;
-       text-transform: uppercase; 
-       word-spacing: 15px; 
-       margin-top: 15px;
-       -webkit-text-stroke: 0.5px rgb(176, 21, 21);
-   }
-   
-   .propiedadesBox{
-   
-       border-radius: 20px;
-       box-shadow: 10px 10px 10px #b3b5caa6;
-       padding-top: 20px;
-       padding-bottom: 20px;
-       margin-left:0;
-   
-   }
-   .descriptionVideo1{
-   
-       float: left;
-       background-color: rgba(15, 34, 72, 0.859);
-       width: 44%;
-       height: 450px;
-       margin-top: 35px;
-   
-   }
-   .descriptionVideo2{
-   
-       float: left;
-       background-color: rgba(15, 34, 72, 0.859);
-       width: 44%;
-       height: 450px;
-       margin-top: 35px;
-   }
-   
-   .descriptionVideo3{
-   
-       float: left;
-       background-color: rgba(15, 34, 72, 0.859);
-       width: 44%;
-       height: 450px;
-       margin-top: 35px;
-   
-   }
-   
-   
-   .boxTitulo{
-       width: 100%;
-       height: 100px;
-       background-color: rgba(124, 104, 238, 0.592);
-       margin-top: 25px;
-       border-radius: 100px 300px;
-       box-shadow: 10px 10px 10px #b3b5caa6;
-       float: left;
-       padding-top: 15px;
-   
-   }
-   
-   
-   
-       #textoTitulo1{
-   
-       position: relative;
-       font-size: 18px;
-       font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-       text-align: center;
-       text-transform: uppercase;
-       margin-right: 50px;
-       color: rgba(52, 106, 224, 0.847);
-   
-   }
-   
-   #textoArticulo1{
-   
-       position: relative;
-       margin: 70px 70px;
-       font-size: 15px;
-       color: aliceblue;
-       font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-       text-align: justify;
-   }
-   
-   
-   
-   div.boxHeader{
-   
-       background-color: rgba(45, 13, 20, 0.779);
-       float: left;
-       width: 92.50%;
-       height: 100px;
-       margin-top: 10px;
-       margin-bottom: 30px;
-       box-shadow: 10px 10px 10px  #464f93a6; 
-   
-   }
-   
-   .box{
-       background-color:  rgba(103, 22, 27, 0.727);
-       width: 100%;
-       height: 100px;
-       margin-bottom: 25px;
-       margin-top: 35px;
-       float:left
-   }
-   
-   footer.boxFooter{
-   
-       background-color:  rgba(45, 13, 20, 0.779);
-       width: 99%;
-       height: 300px;
-       margin-bottom: 20px;
-       box-shadow: 10px 10px 10px #b3b5caa6;
-   }
-   
-   }
+        width: auto;
+        margin: auto;
+    }
+
+.estiloParrafo{
+
+    font-size: 15px;
+    color: aliceblue;
+    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    text-align: justify;
+    float: left;
+    margin: 10px 10px;
+    text-indent: 50px; 
+    line-height: 23px;  
+    letter-spacing: 1px; 
+}
+    
+#letraPeliculas{
+    
+    color:rgb(223, 214, 222);
+    font: 20px bold;
+    font-family: avengers;
+    text-align: center;
+    text-transform: uppercase; 
+    word-spacing: 15px; 
+    margin-top: 15px;
+    -webkit-text-stroke: 0.5px rgb(176, 21, 21);
+}
+
+.propiedadesBox{
+
+    border-radius: 20px;
+    box-shadow: 10px 10px 10px #b3b5caa6;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    margin-left:0;
+    
+}
+
+.descriptionVideo1{
+
+    float: left;
+    width: 44%;
+    height: 500px;
+    margin-top: 35px;
+    
+}
+
+    
+.descriptionVideo2{
+
+    float: left;
+    width: 44%;
+    height: 370px;
+    margin-top: 35px;
+
+}
    
 
-   @media only screen and (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
- 
-   
-       body{
-           width: auto;
-           margin: auto;
-       }
-       
-       .propiedadesBox{
-   
-           border-radius: 20px;
-           box-shadow: 10px 10px 10px #b3b5caa6;
-           padding-top: 20px;
-           padding-bottom: 20px;
-           margin-left:0;
-       
-       }
-       .boxVideo1{
-        float: left;
-        background-color: rgba(11, 79, 142, 0.59);
-        width: 52%;
-        height: 620px;
-        margin: 0px;
+.descriptionVideo3{
+
+    float: left;
+    width: 44%;
+    height: 370px;
+    margin-top: 35px;
+
+}
+
+
+footer.boxFooter{
+    width: 98%;
+    height: 200px;
+    margin-bottom: 20px;
+    box-shadow: 10px 10px 10px #b3b5caa6;
+}
+
+.box{
+    background-color:#c8ceaab4;
+    width: 100%;
+    height: 150px;
+    margin-bottom: 30px;
+    margin-top: 35px;
+    float: left;
+}
+
+}
+
+
+@media only screen and (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
+
+    body{
+        width: auto;
+        margin: auto;
     }
-    .descriptionVideo1{
-        float: right;
-        background-color: rgba(15, 34, 72, 0.859);
-        width: 44%;
-        height: 620px;
-        margin: 0px;
+
+.estiloParrafo{
+
+    font-size: 18px;
+    color: aliceblue;
+    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    text-align: justify;
+    float: left;
+    margin: 10px 10px;
+    text-indent: 50px; 
+    line-height: 25px;  
+    letter-spacing: 1px; 
     }
-    .boxVideo2{
-        float: left;
-        background-color: rgba(11, 79, 142, 0.59);
-        width: 52%;
-        height: 620px;
-        margin: 0px;
-        margin-top: 30px;
-    }
-    .descriptionVideo2{
-        float: right;
-        background-color: rgba(15, 34, 72, 0.859);
-        width: 44%;
-        height: 620px;
-        margin: 0px;
-        margin-top: 30px;
-    }
-    .boxVideo3{
-        float: left;
-        background-color: rgba(11, 79, 142, 0.59);
-        width: 52%;
-        height: 620px;
-        margin: 0px;
-        margin-top: 30px;
-        margin-bottom: 30px;
-    }
-    .descriptionVideo3{
-        float: right;
-        background-color: rgba(15, 34, 72, 0.859);
-        width: 44%;
-        height: 620px;
-        margin: 0px;
-        margin-top: 30px;
-        margin-bottom:30px;
-    }
-   
-       .box{
-           background-color:  rgba(103, 22, 27, 0.727);
-           width: 100%;
-           height: 100px;
-           margin-bottom: 25px;
-           margin-top: 35px;
-           float:left
-       }
-       
-       .estiloParrafo{
-   
-           font-size: 17px;
-           color: aliceblue;
-           font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-           text-align: justify;
-           float: left;
-           margin: 20px 20px;
-           text-indent: 50px; /*sangria*/
-           line-height: 30px;  /*separacion lineas*/
-           letter-spacing: 1px; /*separacion entre letras*/
-       }
-   
-       footer.boxFooter{
-   
-           background-color:  rgba(45, 13, 20, 0.779);
-           width: 100%;
-           height: 300px;
-           margin-bottom: 20px;
-           box-shadow: 10px 10px 10px #b3b5caa6;
-       }
-   
-   
-   }
-   
-   
-   
-   
-   
-   
-   
-   
-   
-   
-   
-   
-   
-   
-   
-   
+    
+#letraPeliculas{
+    
+    color:rgb(223, 214, 222);
+    font: 30px bold;
+    font-family: avengers;
+    text-align: center;
+    text-transform: uppercase; 
+    word-spacing: 15px; 
+    margin-top: 15px;
+    -webkit-text-stroke: 0.5px rgb(176, 21, 21);
+}
+
+.propiedadesBox{
+
+    border-radius: 20px;
+    box-shadow: 10px 10px 10px #b3b5caa6;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    margin-left:0;
+    
+}
+
+.boxVideo1{
+    float: left;
+    width: 52%;
+    height: 500px;
+    margin: 0px;
+}
+.descriptionVideo1{
+    float: right;
+    width: 44%;
+    height: 500px;
+    margin: 0px;
+}
+.boxVideo2{
+    float: left;
+    width: 52%;
+    height: 420px;
+    margin: 0px;
+    margin-top: 30px;
+}
+.descriptionVideo2{
+    float: right;
+    width: 44%;
+    height: 420px;
+    margin: 0px;
+    margin-top: 30px;
+}
+.boxVideo3{
+    float: left;
+    width: 52%;
+    height: 420px;
+    margin: 0px;
+    margin-top: 30px;
+}
+.descriptionVideo3{
+    float: right;
+    width: 44%;
+    height: 420px;
+    margin: 0px;
+    margin-top: 30px;
+}
+
+footer.boxFooter{
+    width: 100%;
+    height: 200px;
+    margin-bottom: 20px;
+    box-shadow: 10px 10px 10px #b3b5caa6;
+}
+
+}
