--- a/css/peliculas/ironman.css
+++ b/css/peliculas/ironman.css
@@ -7,8 +7,6 @@
 }
 
 
-/*******************************************************************************************/
-
 /* Fondo de la página*/
 body{
     max-width: 1300px;
@@ -25,18 +23,18 @@ body{
     background-attachment: fixed; /* dejamos fija la imgen*/
 }
 
-/*******************************************************************************************/
-/*Cajas*/
+/********************************************************************************************************/
+/* caja */
 .box{
     background-color: rgba(75, 8, 9, 0.593);
     width: 100%;
-    height: 120px;
+    height: 150px;
     margin-bottom: 30px;
     margin-top: 35px;
-    float: left;;
+    float: left;
 }
 
-/* texto cabecera*/
+/* texto pelicula*/
 #letraTitulo{
 
     color:rgb(223, 214, 222);
@@ -45,7 +43,7 @@ body{
     text-align: center;
     text-transform: uppercase; 
     word-spacing: 55px; /*separacion entre palabras*/
-    margin-top: 25px;
+    margin-top: 30px;
     -webkit-text-stroke: 0.9px rgb(176, 21, 21);
 }
 
@@ -56,14 +54,12 @@ body{
     align-items: center;  
 }
 
-
-
 /**************** VIDEO 1 ******************************************************************/
 .boxVideo1{
     float: left;
     background-color: rgba(251, 201, 3, 0.489);
     width: 50%;
-    height: 370px;
+    height: 500px;
     margin: 40px;
 }
 
@@ -72,7 +68,7 @@ body{
     float: left;
     background-color: rgba(49, 12, 12, 0.796);
     width: 40%;
-    height: 370px;
+    height: 500px;
     margin-top: 35px;
 
 }
@@ -82,7 +78,7 @@ body{
 
 .boxVideo2{
     float: left;
-    background-color:rgba(251, 201, 3, 0.363);
+    background-color: rgba(251, 201, 3, 0.363);
     width: 50%;
     height: 370px;
     margin: 40px;
@@ -121,8 +117,6 @@ body{
 
 }
 
-
-/*****************************************************************************/
 /** propiedades conjuntas **/
 
 .propiedadesBox{
@@ -134,7 +128,7 @@ body{
 
 }
 
-/*****************************************************************************/
+
 /* posicion video caja */
 
 .positionVideo{ /*Alineacion del elemento Flexbox*/
@@ -162,7 +156,7 @@ body{
 #letraPeliculas{
 
     color:rgb(223, 214, 222);
-    font: 40px bold;
+    font: 30px bold;
     font-family: avengers;
     text-align: center;
     text-transform: uppercase; 
@@ -174,31 +168,25 @@ body{
 @media screen and (min-width: 1300px) {
     .boxVideo1{
         float: left;
-        background-color: rgba(251, 201, 3, 0.489);
         width: 52%;
-        height: 370px;
+        height: 500px;
         margin: 0px;
     }
-    
     .descriptionVideo1{
         float: right;
-        background-color: rgba(49, 12, 12, 0.796);
         width: 44%;
-        height: 370px;
+        height: 500px;
         margin: 0px;
-    
     }
     .boxVideo2{
         float: left;
-        background-color:rgba(251, 201, 3, 0.363);
         width: 52%;
         height: 370px;
         margin: 0px;
-        margin-top:30px;
+        margin-top: 30px;
     }
     .descriptionVideo2{
         float: right;
-        background-color: rgba(91, 23, 23, 0.899);
         width: 44%;
         height: 370px;
         margin: 0px;
@@ -206,23 +194,19 @@ body{
     }
     .boxVideo3{
         float: left;
-        background-color: rgba(251, 201, 3, 0.27);
         width: 52%;
         height: 370px;
         margin: 0px;
         margin-top: 30px;
-        margin-bottom: 30px;
     }
-    
     .descriptionVideo3{
         float: right;
-        background-color: rgba(136, 43, 43, 0.873);
         width: 44%;
         height: 370px;
         margin: 0px;
         margin-top: 30px;
-        margin-bottom: 30px;
     }
+    
 }
 
 @media screen and (max-width: 700px) and (orientation: portrait){
@@ -301,7 +285,6 @@ body{
         width: 98%;
         height: auto;
         margin-top: 15px;
-        margin-bottom: 15px;
     
     }
     
@@ -331,96 +314,121 @@ body{
     }
 }
 
-@media screen and (max-height: 700px) and (orientation: landscape){
+@media screen and (max-width: 700px) and (orientation: landscape){
+    /* Contenedeor del fondo de pantalla */
     
-    /* texto cabecera*/
-    #letraTitulo{
-    
-        font-size: 40px;
-        word-spacing: 25px; /*separacion entre palabras*/
-        margin-top: 15px;
+    .containerFondo{
+        width: auto;
     }
     
+    /********************************************************************************************************/
+    /* caja */
+    .box{
+
+        width: 100%;
+        height: 20px;
+        margin-bottom: 10px;
+        margin-top: 15px;
+        float: left;
+    }
+    
+    /* texto pelicula*/
+    #letraTitulo{
+        font-size: 25px;
+        word-spacing: 10px; /*separacion entre palabras*/
+        margin-top: 10px;
+        -webkit-text-stroke: 0.7px rgb(176, 21, 21);
+    }
+    
+     /* centrar elemntos*/
+    .centrarElementos{
+        display: flex;
+        justify-content: center; /*alineacion horizontal*/
+        align-items: center;  
+    }
+    
+    /**************** VIDEO 1 ******************************************************************/
+    .boxVideo1{
+        float: none;
+        width: 50%;
+        height: 350px;
+        margin: 20px;
+    }
     
     .descriptionVideo1{
     
+        width: 40%;
         float: none;
         position: absolute;
-        top: 463px;
-        left: 400px;
-        width: 37%;
-        height: 371px;
+        left: 55%;
+        top: 305px;
+        height: auto;
+        margin-top: 15px;
     
     }
     
     /*******************************************************************************************/
     /**************** VIDEO 2 ******************************************************************/
     
+    .boxVideo2{
+        float: none;
+        width: 50%;
+        height: 350px;
+        margin: 20px;
+    }
+    
     .descriptionVideo2{
     
+        width: 40%;
         float: none;
         position: absolute;
-        top: 952px;
-        left: 400px;
-        width: 37%;
-        height: 371px;
+        left: 55%;
+        top: 710px;
+        height: 355px;
+        margin-top: 15px;
     
     }
     
     /*******************************************************************************************/
     /**************** VIDEO 3 ******************************************************************/
     
-    .descriptionVideo3{
-    
+    .boxVideo3{
         float: none;
-        position: absolute;
-        top: 1443px;
-        left: 400px;
-        width: 37%;
-        height: 371px;
-    
-    }
-    
-    
-    /*****************************************************************************/
-    /** propiedades conjuntas **/
-    
-    .propiedadesBox{
-    
-        border-radius: 20px;
-        box-shadow: 10px 10px 10px #b3b5caa6;
-        padding-top: 20px;
-        padding-bottom: 20px;
-    
-    }
-    
-    /*****************************************************************************/
-    /* posicion video caja */
-    
-    .positionVideo{ /*Alineacion del elemento Flexbox*/
-        display: flex;
-        justify-content: center; /*alineacion horizontal*/
-        align-items: center; /*alineacion vertical*/
+        width: 50%;
+        height: 350px;
+        margin: 20px;
         
     }
     
+    .descriptionVideo3{
+
+        width: 40%;
+        float: none;
+        position: absolute;
+        left: 55%;
+        top: 1123px;
+        height: 355px;
+        margin-top: 15px;
+    }
+
     /*****************************************************************************/
     
     .estiloParrafo{
     
-        font-size: 17px;
+        font-size: 13px;
         margin: 10px 10px;
         text-indent: 20px; /*sangria*/
-        line-height: 15px;  /*separacion lineas*/
-        letter-spacing: 1px; /*separacion entre letras*/
+        line-height: 20px;  /*separacion lineas*/
+        letter-spacing: 0px; /*separacion entre letras*/
     }
     
     #letraPeliculas{
     
-        font-size: 23px;
+        font-size: 20px;
         word-spacing: 5px; /*separacion entre palabras*/
+        margin-top: 5px;
+        -webkit-text-stroke: 0.5px rgb(176, 21, 21);
     }
-    
 }
 
 
@@ -431,72 +439,88 @@ body{
         margin: auto;
     }
 
-    .boxVideo1{
-        float: left;
-        background-color: rgba(251, 201, 3, 0.489);
-        width: 52%;
-        height: 520px;
-        margin: 0px;
-    }
-    
-    .descriptionVideo1{
-        float: right;
-        background-color: rgba(49, 12, 12, 0.796);
-        width: 44%;
-        height: 520px;
-        margin: 0px;
-    
-    }
-    .boxVideo2{
-        float: left;
-        background-color:rgba(251, 201, 3, 0.363);
-        width: 52%;
-        height: 470px;
-        margin: 0px;
-        margin-top:30px;
-    }
-    .descriptionVideo2{
-        float: right;
-        background-color: rgba(91, 23, 23, 0.899);
-        width: 44%;
-        height: 470px;
-        margin: 0px;
-        margin-top: 30px;
-    }
-    .boxVideo3{
-        float: left;
-        background-color: rgba(251, 201, 3, 0.27);
-        width: 52%;
-        height: 470px;
-        margin: 0px;
-        margin-top: 30px;
-        margin-bottom: 30px;
-    }
-    
-    .descriptionVideo3{
-        float: right;
-        background-color: rgba(136, 43, 43, 0.873);
-        width: 44%;
-        height: 470px;
-        margin: 0px;
-        margin-top: 30px;
-        margin-bottom: 30px;
-    }
-    .estiloParrafo{
+.estiloParrafo{
 
-        font-size: 20px;
-        color: aliceblue;
-        font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-        text-align: justify;
-        float: left;
-        margin: 10px 10px;
-        text-indent: 50px; /*sangria*/
-        line-height: 25px;  /*separacion lineas*/
-        letter-spacing: 1px; /*separacion entre letras*/
-    }
+    font-size: 15px;
+    color: aliceblue;
+    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    text-align: justify;
+    float: left;
+    margin: 10px 10px;
+    text-indent: 50px; 
+    line-height: 23px;  
+    letter-spacing: 1px; 
+}
     
+#letraPeliculas{
+    
+    color:rgb(223, 214, 222);
+    font: 20px bold;
+    font-family: avengers;
+    text-align: center;
+    text-transform: uppercase; 
+    word-spacing: 15px; 
+    margin-top: 15px;
+    -webkit-text-stroke: 0.5px rgb(176, 21, 21);
+}
 
-}  
+.propiedadesBox{
+
+    border-radius: 20px;
+    box-shadow: 10px 10px 10px #b3b5caa6;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    margin-left:0;
+    
+}
+
+.descriptionVideo1{
+
+    float: left;
+    width: 44%;
+    height: 500px;
+    margin-top: 35px;
+    
+}
+
+    
+.descriptionVideo2{
+
+    float: left;
+    width: 44%;
+    height: 370px;
+    margin-top: 35px;
+
+}
+   
+
+.descriptionVideo3{
+
+    float: left;
+    width: 44%;
+    height: 370px;
+    margin-top: 35px;
+
+}
+
+
+footer.boxFooter{
+    width: 98%;
+    height: 200px;
+    margin-bottom: 20px;
+    box-shadow: 10px 10px 10px #b3b5caa6;
+}
+
+.box{
+    background-color:#c8ceaab4;
+    width: 100%;
+    height: 150px;
+    margin-bottom: 30px;
+    margin-top: 35px;
+    float: left;
+}
+
+}
 
 
 @media only screen and (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
@@ -506,98 +530,90 @@ body{
         margin: auto;
     }
 
-    .estiloParrafo{
+.estiloParrafo{
 
-        font-size: 18px;
-        color: aliceblue;
-        font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-        text-align: justify;
-        float: left;
-        margin: 10px 10px;
-        text-indent: 50px; /*sangria*/
-        line-height: 25px;  /*separacion lineas*/
-        letter-spacing: 1px; /*separacion entre letras*/
+    font-size: 18px;
+    color: aliceblue;
+    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    text-align: justify;
+    float: left;
+    margin: 10px 10px;
+    text-indent: 50px; 
+    line-height: 25px;  
+    letter-spacing: 1px; 
     }
     
-    #letraPeliculas{
+#letraPeliculas{
     
-        color:rgb(223, 214, 222);
-        font: 40px bold;
-        font-family: avengers;
-        text-align: center;
-        text-transform: uppercase; 
-        word-spacing: 15px; /*separacion entre palabras*/
-        margin-top: 15px;
-        -webkit-text-stroke: 0.5px rgb(176, 21, 21);
-    }
-
-    .propiedadesBox{
-
-        border-radius: 20px;
-        box-shadow: 10px 10px 10px #b3b5caa6;
-        padding-top: 20px;
-        padding-bottom: 20px;
-        margin-left:0;
-    }
-
-    .boxVideo1{
-        float: left;
-        background-color: rgba(251, 201, 3, 0.489);
-        width: 52%;
-        height: 370px;
-        margin: 0px;
-    }
-    
-    .descriptionVideo1{
-        float: right;
-        background-color: rgba(49, 12, 12, 0.796);
-        width: 44%;
-        height: 370px;
-        margin: 0px;
-    
-    }
-    .boxVideo2{
-        float: left;
-        background-color:rgba(251, 201, 3, 0.363);
-        width: 52%;
-        height: 370px;
-        margin: 0px;
-        margin-top:30px;
-    }
-    .descriptionVideo2{
-        float: right;
-        background-color: rgba(91, 23, 23, 0.899);
-        width: 44%;
-        height: 370px;
-        margin: 0px;
-        margin-top: 30px;
-    }
-    .boxVideo3{
-        float: left;
-        background-color: rgba(251, 201, 3, 0.27);
-        width: 52%;
-        height: 370px;
-        margin: 0px;
-        margin-top: 30px;
-        margin-bottom: 30px;
-    }
-    
-    .descriptionVideo3{
-        float: right;
-        background-color: rgba(136, 43, 43, 0.873);
-        width: 44%;
-        height: 370px;
-        margin: 0px;
-        margin-top: 30px;
-        margin-bottom: 30px;
-    }
-
+    color:rgb(223, 214, 222);
+    font: 30px bold;
+    font-family: avengers;
+    text-align: center;
+    text-transform: uppercase; 
+    word-spacing: 15px; 
+    margin-top: 15px;
+    -webkit-text-stroke: 0.5px rgb(176, 21, 21);
 }
 
+.propiedadesBox{
 
+    border-radius: 20px;
+    box-shadow: 10px 10px 10px #b3b5caa6;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    margin-left:0;
+    
+}
 
+.boxVideo1{
+    float: left;
+    width: 52%;
+    height: 500px;
+    margin: 0px;
+}
+.descriptionVideo1{
+    float: right;
+    width: 44%;
+    height: 500px;
+    margin: 0px;
+}
+.boxVideo2{
+    float: left;
+    width: 52%;
+    height: 420px;
+    margin: 0px;
+    margin-top: 30px;
+}
+.descriptionVideo2{
+    float: right;
+    width: 44%;
+    height: 420px;
+    margin: 0px;
+    margin-top: 30px;
+}
+.boxVideo3{
+    float: left;
+    width: 52%;
+    height: 420px;
+    margin: 0px;
+    margin-top: 30px;
+}
+.descriptionVideo3{
+    float: right;
+    width: 44%;
+    height: 420px;
+    margin: 0px;
+    margin-top: 30px;
+}
 
+footer.boxFooter{
+    width: 100%;
+    height: 200px;
+    margin-bottom: 20px;
+    box-shadow: 10px 10px 10px #b3b5caa6;
+}
 
+}
 
 
 
